Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="liugaozy" class="anchor" href="#liugaozy" aria-hidden="true"><span class="octicon octicon-link"></span></a>liugaozy</h1>
-
-<p>LG-Repository</p>
+      <p><strong># liugaozy</strong>
+<strong>LG-Repository</strong>
+<strong>``</strong></p>
 
       <footer class="site-footer">
 
