Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     </section>
 
     <section class="main-content">
-      <p><strong># liugaozy</strong>
-<strong>LG-Repository</strong>
-<strong>``</strong></p>
+      <p><strong>LG的博客</strong></p>
 
       <footer class="site-footer">
 
